# desktop-pet

./: .gitignore  README.md  build-tauri.js  control.html  main.js  package.json  pet.css  pet.html  pet.js  pet_v2.css  pet_v2.js  pet_v3.js  pnpm-lock.yaml  start.bat
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
